--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,11 +1,9 @@
 <!--INICIO DO CONTEUDO-->
 <section class="content-header">
 </section>
-
 <section class="content">
   <section class="invoice">
-
-    <form #ngForm novalidate>
+    <form #form="ngForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -35,7 +33,7 @@
         <div class="col-sm-3 col-xs-6">
           <mt-input-container>
             <!-- container para inputs adicionar input aqui. -->
-            <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
+            <input type="text" class="form-control" name="optionalAddress" ngModel placeholder="Complemento">
           </mt-input-container>
         </div>
         <!-- /.col -->
@@ -47,49 +45,7 @@
         <div class="col-xs-12">
           <p class="lead">Itens do Pedido:</p>
         </div>
-        <div class="col-xs-12 table-responsive">
-
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th class="text-center">Quantidade</th>
-                <th>Item</th>
-                <th>Descrição</th>
-                <th class="text-right">Subtotal</th>
-                <th class="text-right"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="text-center">
-                  <a class="btn btn-sm"><i class="fa fa-minus"></i></a> 1
-                  <a class="btn btn-sm"><i class="fa fa-plus"></i></a>
-                </td>
-                <td>Cup Cake</td>
-
-                <td>Recheado com doce de leite</td>
-                <td class="text-right">R$ 10,00</td>
-                <td class="text-right">
-                  <a class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center">
-                  <a class="btn btn-sm"><i class="fa fa-minus"></i></a> 1
-                  <a class="btn btn-sm"><i class="fa fa-plus"></i></a>
-                </td>
-                <td>Croissant</td>
-
-                <td>Recheado com presunto e queijo</td>
-                <td class="text-right">R$ 10,00</td>
-                <td class="text-right">
-                  <a class="btn btn-sm danger "><i class="fa fa-remove"></i></a>
-                </td>
-              </tr>
-
-            </tbody>
-          </table>
-        </div>
+        <mt-order-items [items]="cartItems()" (increaseQty)="increaseQty($event)" (decreaseQty)="decreaseQty($event)" (remove)="remove($event)"></mt-order-items>
         <!-- /.col -->
       </div>
       <!-- /.row -->
@@ -100,45 +56,28 @@
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-            <mt-radio [options]="paymentOptions"></mt-radio>
+            <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required></mt-radio>
           </div>
 
         </div>
         <!-- /.col -->
         <div class="col-sm-6 col-xs-12">
           <p class="lead">Frete e Total:</p>
+          <mt-delivery-costs [delivery]="delivery" [itemsValue]="itemsValue()"></mt-delivery-costs>
+        </div>
+        <!-- /.col -->
+      </div>
 
-          <div class="table-responsive">
-            <table class="table">
-              <tbody>
-                <tr>
-                  <th style="width:50%">Itens:</th>
-<td class="text-right">R$ 20,00</td>
-</tr>
-<tr>
-  <th>Frete:</th>
-  <td class="text-right">R$ 8,00</td>
-</tr>
-<tr>
-  <th>Total:</th>
-  <td class="text-right">R$ 28,00</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-<!-- /.col -->
-</div>
+    </form>
 
-</form>
+    <div class="row">
+      <div class="col-xs-12">
+        <button (click)="checkOrder(form.value)" [disabled]="!form.valid || !cartItems().length" href="order-summary.html" class="btn btn-success pull-right">
+          <i class="fa fa-credit-card"></i> Concluir Pedido
+        </button>
+      </div>
+    </div>
 
-<div class="row">
-  <div class="col-xs-12">
-    <a href="order-summary.html" class="btn btn-success pull-right"><i class="fa fa-credit-card"></i> Concluir Pedido
-                  </a>
-  </div>
-</div>
-
-</section>
+  </section>
 </section>
 <!-- FIM DO CONTEUDO-->
